--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,8 +1,12 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
-    id 'kotlin-kapt'
     id 'kotlin-android-extensions'
+    id 'kotlin-kapt'
+    id("dagger.hilt.android.plugin")
+
+
+
 }
 
 android {
@@ -43,10 +47,18 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
-    implementation 'com.google.dagger:hilt-android:2.33-beta'
+
+
     implementation 'com.squareup.retrofit2:retrofit:2.9.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
-    kapt 'com.google.dagger:hilt-android-compiler:2.33-beta'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
+    implementation("com.google.dagger:hilt-android:2.38.1")
+    kapt("com.google.dagger:hilt-android-compiler:2.38.1")
+
 }
+kapt {
+    correctErrorTypes = true
+}
+
+
